[package]
name = "vulkan-rust-tutorial"
version = "0.1.0"
edition = "2018"

[dependencies]
vulkano = "0.18"
vulkano-shaders = "0.18"
vulkano-win = "0.18"
winit = "0.22"
image = "0.23.4"
tobj = "2.0.1"
nalgebra-glm = "0.7.0"
eyre = "0.4"
color-eyre = { version = "0.3", default-features = false }

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.tobj]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3
