[package]
name = "vulkan-rust-tutorial"
version = "0.1.0"
edition = "2018"

[dependencies]
vulkano = "0.22"
vulkano-shaders = "0.22"
vulkano-win = "0.22"
winit = "0.24"
image = "0.23"
tobj = "2"
nalgebra-glm = "0.12"
color-eyre = { version = "0.5", default-features = false }

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.tobj]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3
